# viq-systems

./: .gitignore  404.html  README.md  about.html  contact.html  index.html  services.html  work.html
.github/workflows/: deploy-frontend.yml
backend/: .gitignore  README.md  pyproject.toml  wrangler.jsonc
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: settings.py
backend/tests/: test_app.py
css/: style.css
frontend/: README.md  about.html  contact.html  index.html  services.html  vite.config.js  work.html
frontend/src/: App.css  App.jsx  index.css  siteContent.js
frontend/src/pages/: WorkCaseStudy.jsx
js/: main.js
